2017-07-31  Ethan A Merritt  <merritt@u.washington.edu>

	* config/mingw/Makefile config/msvc/Makefile win/gnuplot.iss:
	The pm3d and contrib subdirectories are no longer in the distribution
	source, so they must not appear in the windows installer inventory.

2017-07-30  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_view):  Switching from "setview equal xy[z]" to 
	"set view map" failed to clear the 3D aspect ratio flag, leading to
	conflicting scale factors.  Now we treat it as "set size ratio -1",
	which is what the documentation says.
	Bug #1948

2017-07-29  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/term.c (test_term):  Disable extra space around textbox for size
	comparision.

2017-07-29  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/mingw/Makefile config/msvc/Makefile:  Mingw-w64 and MSVC have
	working popen/pclose implementations for GUI applications.  So we use
	them instead of our own "fake" pipe emulation.
	Bug #1950

	* src/win/winmain.c src/syscfg.h config/config.nt config/config.oww:
	Unicode support for popen.

	* src/stdfn.c|h src/command.c src/win/wgdiplus.cpp src/win/wd2d.cpp
	src/internal.c:  Do not include windows.h in a header file and use the
	WIN32_LEAN_AND_MEAN define to speed up compilation.

2017-07-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_range):  Allow to set range properties without
	changing the range min/max.  E.g. "set xrange noextend".

	* src/axis.h (autoscale_one_point) src/plot2d.c src/plot3d.c:
	Refresh_bounds and refresh_3dbounds perform only a simplified version
	of autoscaling.  Consolidate this into a macro autoscale_one_point().
	Extend the simplified autoscaling to include both ends of a VECTOR plot.
	Other cases remain where the simplified autoscale is insufficient.
	Bug #1947 #1709

2017-07-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/fit.c:  Ignore non-numeric contents of potential dummy variables
	x y t u v used during fit evaluation.
	Bug #1949
